[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This feature would be set only by app-services
tracing_log = ["dep:tracing-log"]

[dependencies]
tracing-log = { version = "0.2", optional = true }
first_lib = { path = "../first_lib" }
second_lib = { path = "../second_lib" }
parking_lot = "0.12"
serde_json = "1"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

